# server/docs/swagger.json
@@ -2522,7 +2522,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.LoginRequestBody"
+                            "$ref": "#/definitions/api.LoginRequest"
                         }
                     }
                 ],
@@ -3767,13 +3767,17 @@
                 }
             }
         },
-        "api.LoginRequestBody": {
+        "api.LoginRequest": {
             "type": "object",
             "required": [
-                "password",
-                "username"
+                "password"
             ],
             "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 6
+                },
                 "password": {
                     "type": "string",
                     "maxLength": 32,
@@ -3789,19 +3793,19 @@
         "api.LoginResponse": {
             "type": "object",
             "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "access_token_expires_in": {
+                    "type": "string"
+                },
                 "refresh_token": {
                     "type": "string"
                 },
-                "refresh_token_expire_at": {
+                "refresh_token_expires_at": {
                     "type": "string"
                 },
                 "session_id": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
-                },
-                "token_expire_at": {
                     "type": "string"
                 },
                 "user": {
@@ -4280,6 +4284,9 @@
                     "type": "string"
                 },
                 "password_changed_at": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 },
                 "role": {
