# server/internal/api/auth.go
@@ -11,12 +11,13 @@ import (
 	"github.com/hibiken/asynq"
 	"github.com/thanhphuocnguyen/go-eshop/internal/auth"
 	repository "github.com/thanhphuocnguyen/go-eshop/internal/db/repository"
+	"github.com/thanhphuocnguyen/go-eshop/internal/utils"
 	"github.com/thanhphuocnguyen/go-eshop/internal/worker"
 )
 
 type RegisterRequestBody struct {
-	Username string            `json:"username" binding:"required,min=3,max=32,alphanum,lowercase"`
-	Password string            `json:"password" binding:"required,min=6,max=32,alphanum"`
+	Username string            `json:"username" binding:"required,min=3,max=32,lowercase"`
+	Password string            `json:"password" binding:"required,min=6,max=32"`
 	FullName string            `json:"fullname" binding:"required,min=3,max=32"`
 	Phone    string            `json:"phone" binding:"required,min=10,max=15"`
 	Email    string            `json:"email" binding:"required,email,max=255,min=6"`
@@ -24,18 +25,17 @@ type RegisterRequestBody struct {
 }
 
 type LoginRequest struct {
-	Username *string `json:"username" binding:"omitempty,min=3,max=32,alphanum"`
+	Username *string `json:"username" binding:"omitempty,min=3,max=32"`
 	Email    *string `json:"email" binding:"omitempty,email,max=255,min=6"`
-	Password string  `json:"password" binding:"required,min=6,max=32,alphanum"`
+	Password string  `json:"password" binding:"required,min=6,max=32"`
 }
 
 type LoginResponse struct {
-	ID                   uuid.UUID    `json:"session_id"`
-	AccessToken          string       `json:"access_token"`
-	AccessTokenExpireAt  time.Time    `json:"access_token_expire_at"`
-	RefreshToken         string       `json:"refresh_token"`
-	RefreshTokenExpireAt time.Time    `json:"refresh_token_expire_at"`
-	User                 UserResponse `json:"user"`
+	ID                    uuid.UUID `json:"session_id"`
+	AccessToken           string    `json:"access_token"`
+	AccessTokenExpiresAt  time.Time `json:"access_token_expires_in"`
+	RefreshToken          string    `json:"refresh_token"`
+	RefreshTokenExpiresAt time.Time `json:"refresh_token_expires_at"`
 }
 
 type RefreshTokenResponse struct {
@@ -94,25 +94,40 @@ func (sv *Server) registerHandler(c *gin.Context) {
 		arg.Role = repository.UserRoleAdmin
 	}
 	user, err := sv.repo.CreateUser(c, arg)
+
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, createErrorResponse[UserResponse](http.StatusBadRequest, "", err))
 		return
 	}
 
-	err = sv.taskDistributor.SendVerifyEmail(
-		c,
-		&worker.PayloadVerifyEmail{
-			UserID: user.ID,
-		},
-		asynq.MaxRetry(3),
-		asynq.ProcessIn(5*time.Second),
-		asynq.Queue(worker.QueueCritical),
-	)
+	createAddressArgs := repository.CreateAddressParams{
+		UserID:   user.ID,
+		Phone:    req.Address.Phone,
+		Street:   req.Address.Street,
+		City:     req.Address.City,
+		District: req.Address.District,
+		Default:  true,
+	}
+	if req.Address.Ward != nil {
+		createAddressArgs.Ward = utils.GetPgTypeText(*req.Address.Ward)
+	}
+	createdAddress, err := sv.repo.CreateAddress(c, createAddressArgs)
 
-	message := "Please verify your email address to activate your account"
 	if err != nil {
-		createErrorResponse[UserResponse](http.StatusInternalServerError, "", err)
+		c.JSON(http.StatusInternalServerError, createErrorResponse[UserResponse](http.StatusBadRequest, "", err))
 		return
+	}
+
+	err = sv.taskDistributor.SendVerifyEmail(c, &worker.PayloadVerifyEmail{UserID: user.ID}, asynq.MaxRetry(3), asynq.ProcessIn(5*time.Second), asynq.Queue(worker.QueueCritical))
+
+	if err != nil {
+		createErrorResponse[UserResponse](http.StatusInternalServerError, "Please verify your email address to activate your account", err)
+		return
+	}
+
+	ward := ""
+	if createdAddress.Ward.Valid {
+		ward = createdAddress.Ward.String
 	}
 
 	userResp := &UserResponse{
@@ -125,9 +140,19 @@ func (sv *Server) registerHandler(c *gin.Context) {
 		VerifiedPhone: user.VerifiedPhone,
 		UpdatedAt:     user.UpdatedAt.String(),
 		FullName:      user.Fullname,
+		Addresses: []AddressResponse{{
+			ID:        createdAddress.ID,
+			Phone:     createdAddress.Phone,
+			Address:   createdAddress.Street,
+			District:  createdAddress.District,
+			Ward:      &ward,
+			City:      createdAddress.City,
+			Default:   createdAddress.Default,
+			CreatedAt: createdAddress.CreatedAt,
+		}},
 	}
 
-	c.JSON(http.StatusOK, createSuccessResponse(c, userResp, message, nil, nil))
+	c.JSON(http.StatusOK, createSuccessResponse(c, userResp, "Created user and address successfully", nil, nil))
 }
 
 // loginHandler godoc
@@ -136,7 +161,7 @@ func (sv *Server) registerHandler(c *gin.Context) {
 // @Tags users
 // @Accept  json
 // @Produce  json
-// @Param input body LoginRequestBody true "User info"
+// @Param input body LoginRequest true "User info"
 // @Success 200 {object} ApiResponse[LoginResponse]
 // @Failure 401 {object} ApiResponse[LoginResponse]
 // @Failure 500 {object} ApiResponse[LoginResponse]
@@ -201,22 +226,13 @@ func (sv *Server) loginHandler(c *gin.Context) {
 		return
 	}
 
-	userResp := UserResponse{
-		ID:       user.ID,
-		Username: user.Username,
-		Role:     user.Role,
-		FullName: user.Fullname,
-	}
-
 	loginResp := LoginResponse{
-		ID:                   session.ID,
-		AccessTokenExpireAt:  payload.ExpiredAt,
-		AccessToken:          accessToken,
-		RefreshToken:         refreshToken,
-		RefreshTokenExpireAt: rfPayload.ExpiredAt,
+		ID:                    session.ID,
+		AccessTokenExpiresAt:  payload.Expires,
+		AccessToken:           accessToken,
+		RefreshToken:          refreshToken,
+		RefreshTokenExpiresAt: rfPayload.Expires,
 	}
-	loginResp.User = userResp
-
 	c.JSON(http.StatusOK, createSuccessResponse(c, loginResp, "success", nil, nil))
 }
 
@@ -236,6 +252,7 @@ func (sv *Server) refreshTokenHandler(c *gin.Context) {
 		c.JSON(http.StatusUnauthorized, createErrorResponse[RefreshTokenResponse](http.StatusUnauthorized, "", fmt.Errorf("refresh token is required")))
 		return
 	}
+
 	refreshToken := authHeader[len("Bearer "):]
 	refreshTokenPayload, err := sv.tokenGenerator.VerifyToken(refreshToken)
 	if err != nil {
@@ -283,8 +300,6 @@ func (sv *Server) refreshTokenHandler(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, createSuccessResponse(c, RefreshTokenResponse{
-		AccessToken:          accessToken,
-		AccessTokenExpiresAt: time.Now().Add(sv.config.AccessTokenDuration),
-	}, "success", nil, nil))
+	c.JSON(http.StatusOK,
+		createSuccessResponse(c, RefreshTokenResponse{AccessToken: accessToken, AccessTokenExpiresAt: time.Now().Add(sv.config.AccessTokenDuration)}, "success", nil, nil))
 }
